# ProposalFlowAI

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/admin/: .env.local.example  package.json
apps/admin/src/app/: globals.css  layout.tsx  page.tsx
apps/admin/tests/: smoke.test.ts
apps/api/: .env.local.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/admin/: __init__.py  router.py
apps/api/app/api/product/: __init__.py  router.py
apps/api/app/core/auth/: __init__.py  session.py
apps/api/app/core/permissions/: __init__.py  guards.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/admin_reporting/: __init__.py
apps/api/app/modules/auth/: __init__.py
apps/api/app/modules/workspace/: __init__.py
apps/api/fastapi/: __init__.py  testclient.py
apps/api/tests/: test_health.py
apps/web/: .env.local.example  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: smoke.test.ts
apps/worker/: .env.local.example  pyproject.toml
apps/worker/app/: __init__.py  main.py  worker.py
apps/worker/tests/: test_worker.py
infra/: README.md
infra/compose/: docker-compose.local.yml
scripts/: README.md
scripts/ci/: README.md
scripts/dev/: README.md  health-local.sh  start-local.sh  stop-local.sh
tests/: README.md
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
(+44 files in other folders)
