[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proposalflow-worker"
version = "0.1.0"
description = "Background worker shell for ProposalFlow AI."
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["app", "tests"]
